tests/ui/opts/duplicate_param_same_attr.stderr
error: duplicate parameter
 --> tests/ui/opts/duplicate_param_same_attr.rs:4:21
  |
4 | #[funcmap(params(T, T))]
  |                     ^
